# sgpu-compute

./: Cargo.toml  LICENSE  README.md  flake.nix
benches/: bench.rs  normal_distribution.wgsl
examples/: normal_distribution.rs  normal_distribution.wgsl  parallel_prefix.rs  parallel_prefix.wgsl
src/: blocking.rs  lib.rs  prelude.rs  primitive_number.rs
tests/: integration_test.rs  normal_distribution.rs
