[package]
name = "sgpu-compute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["blocking"]
blocking = ["dep:pollster"]

[dependencies]
bytemuck = { version = "1.14", features = ["min_const_generics", "derive"] }
flume = "0.11.0"
pollster = { version = "0.3.0", optional = true }
wgpu = { version = "0.19" }

[dev-dependencies]
criterion = "0.5"
rand = "0.8.5"
rayon = "1.9"

[[bench]]
name = "bench"
harness = false
