[package]
name = "sgpu-compute"
description = "Simple GPU-Compute using WebGPU"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/marcantoinem/sgpu-compute"
readme = "README.md"
keywords = ["webgpu", "gpu", "compute", "sgpu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["blocking"]
blocking = ["dep:pollster"]

[dependencies]
bytemuck = { version = "1.14", features = ["min_const_generics", "derive"] }
flume = "0.11.0"
pollster = { version = "0.3.0", optional = true }
wgpu = { version = "0.19" }

[dev-dependencies]
criterion = "0.5"
rand = "0.8.5"
rayon = "1.9"
pollster = { version = "0.3.0", features = ["macro"] }


[[bench]]
name = "bench"
harness = false
